--- a/prepros.cfg
+++ b/prepros.cfg
@@ -446,6 +446,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "0d5ea5ca": {
+          "id": "0d5ea5ca",
+          "path": "img/icons/menu_arrow.png",
+          "output": "img/icons/menu_arrow.png",
+          "name": "menu_arrow.png",
+          "category": "IMAGE",
+          "size": 1211,
+          "type": "png",
+          "initialSize": 1211,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
