--- a/prepros.cfg
+++ b/prepros.cfg
@@ -459,6 +459,30 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "09f4109f": {
+          "id": "09f4109f",
+          "path": "cabinet.html",
+          "output": "cabinet.html",
+          "name": "cabinet.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "737094a7": {
+          "id": "737094a7",
+          "path": "img/cabinet_bg.jpg",
+          "output": "img/cabinet_bg.jpg",
+          "name": "cabinet_bg.jpg",
+          "category": "IMAGE",
+          "size": 188775,
+          "type": "jpg",
+          "initialSize": 188775,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
